refactor: 💡 fix app.json

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "calendarReactNative",
+    "name": "Calendar React Native",
     "slug": "calendarReactNative",
     "version": "1.0.0",
     "orientation": "portrait",
