--- a/package.json
+++ b/package.json
@@ -4,34 +4,35 @@
   "private": true,
   "dependencies": {
     "@expo/vector-icons": "^10.2.1",
-    "@types/jest": "^26.0.10",
-    "@types/lodash": "^4.14.161",
-    "@typescript-eslint/eslint-plugin": "^3.10.1",
-    "@typescript-eslint/parser": "^3.10.1",
-    "eslint": "^7.7.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.20.6",
     "expo": "~38.0.8",
-    "git-cz": "^4.7.1",
-    "husky": "^4.3.0",
-    "jest": "^26.4.2",
-    "jest-expo": "^38.0.2",
     "lodash": "^4.17.20",
     "moment": "^2.27.0",
     "moment-timezone": "^0.5.31",
-    "prettier": "^2.1.1",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
     "react-native-easy-grid": "^0.2.2",
-    "react-native-web": "~0.11.7",
-    "standard-version": "^9.0.0"
+    "react-native-web": "~0.11.7"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
+    "@types/jest": "^26.0.10",
+    "@types/lodash": "^4.14.161",
     "@types/react": "~16.9.41",
     "@types/react-native": "~0.62.13",
+    "@typescript-eslint/eslint-plugin": "^3.10.1",
+    "@typescript-eslint/parser": "^3.10.1",
+    "codecov": "^3.8.1",
+    "eslint": "^7.7.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.20.6",
+    "git-cz": "^4.7.1",
+    "husky": "^4.3.0",
+    "jest": "^26.4.2",
+    "jest-expo": "^38.0.2",
+    "prettier": "^2.1.1",
+    "standard-version": "^9.0.0",
     "typescript": "~3.9.5"
   },
   "scripts": {
